# Tensor-Mini

./: CMakeLists.txt  README.md
inc/: activation.hpp  common.hpp  initializer.hpp  layer.hpp  network.hpp  one_hot_encode.hpp  pool_layer.hpp  tensor.hpp
src/: test.cpp
